--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
 
-    <div class="header">Header</div>
-    <div class="products">PRODUCTS</div>
-    <div class="shoping">SHOPING</div>
+    <div id="header">Header</div>
+    <div id="products">PRODUCTS</div>
+    <div id="shoping">SHOPING</div>
 
     <!-- Constants and Utils -->
-    <link rel="stylesheet" href="constants/catalog.js">
-    <link rel="stylesheet" href="constants/root.js">
+    <script src="constants/catalog.js"></script>
+    <script src="constants/root.js"></script>
+    <script src="utils/localStorageUtil.js"></script>
     <!-- Header -->
     <script src="components/Header/Header.js"></script>
     <link rel="stylesheet" href="components/Header/Header.css">
