--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <div id="shoping">SHOPING</div>
 
     <!-- Constants and Utils -->
-    <script src="constants/catalog.js"></script>
     <script src="constants/root.js"></script>
     <script src="utils/localStorageUtil.js"></script>
     <!-- Header -->
@@ -27,6 +26,7 @@
     <script src="components/Shoping/Shoping.js"></script>
     <link rel="stylesheet" href="components/Shoping/Shoping.css">
     
-    
+    <!---->
+    <script src="index.js"></script>
 </body>
 </html>
