--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
 
-    <div id="header">Header</div>
-    <div id="products">PRODUCTS</div>
-    <div id="shoping">SHOPING</div>
+    <div id="header"></div>
+    <div id="products"></div>
+    <div id="shoping"></div>
+    <div id="spinner"></div>
 
     <!-- Constants and Utils -->
     <script src="constants/root.js"></script>
@@ -25,6 +26,9 @@
     <!-- Shoping -->
     <script src="components/Shoping/Shoping.js"></script>
     <link rel="stylesheet" href="components/Shoping/Shoping.css">
+    <!-- Spinner -->
+    <script src="components/Spinner/Spinner.js"></script>
+    <link rel="stylesheet" href="components/Spinner/Spinner.css">
     
     <!---->
     <script src="index.js"></script>
