--- a/index.html
+++ b/index.html
@@ -13,22 +13,31 @@
     <div id="products"></div>
     <div id="shoping"></div>
     <div id="spinner"></div>
+    <div id="error"></div>
 
     <!-- Constants and Utils -->
     <script src="constants/root.js"></script>
     <script src="utils/localStorageUtil.js"></script>
+
     <!-- Header -->
     <script src="components/Header/Header.js"></script>
     <link rel="stylesheet" href="components/Header/Header.css">
+
     <!-- Products -->
     <script src="components/Products/Products.js"></script>
     <link rel="stylesheet" href="components/Products/Products.css">
+
     <!-- Shoping -->
     <script src="components/Shoping/Shoping.js"></script>
     <link rel="stylesheet" href="components/Shoping/Shoping.css">
+
     <!-- Spinner -->
     <script src="components/Spinner/Spinner.js"></script>
     <link rel="stylesheet" href="components/Spinner/Spinner.css">
+
+    <!-- Error -->
+    <script src="components/Error/Error.js"></script>
+    <link rel="stylesheet" href="components/Error/Error.css">
     
     <!---->
     <script src="index.js"></script>
